<resources>
    <string name="app_name">GoToMarket</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="nav_header_title">GoToMarket</string>
    <string name="nav_header_subtitle">user email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="make_logout">Efetuar logout</string>
    <string name="action_about">Sobre</string>
    <string name="about">Sobre o aplicativo:</string>
    <string name="about_content">Desenvolvido para fins acadêmicos.</string>


    <!-- MAIN CONTENT -->
    <string name="main_search">Procurar no catálogo</string>

    <!-- SIDE MENU -->
    <string name="menu_category0">Smartphones</string>
    <string name="menu_category1">Lavadoras</string>
    <string name="menu_category2">Panelas</string>
    <string name="menu_category3">Cadeiras</string>
    <string name="menu_new_product">Novo produto</string>
    <string name="menu_sales">Vendas</string>
    <string name="menu_orders">Compras</string>
    <string name="menu_login">Login</string>

    <!-- USER SCREEN FIELD TEXT-->
    <string name="user_name">Nome</string>
    <string name="user_email">Email</string>
    <string name="user_password">Senha</string>
    <string name="user_address">Endereço</string>
    <string name="user_payment_key">MerchantId</string>
    <string name="user_payment_token">MerchantKey</string>

    <!-- PRODUCT SCREEN FIELD TEXT-->
    <string name="product_name">Nome do produto</string>
    <string name="product_description">Descrição do produto</string>
    <string name="product_value">Preço do produto</string>
    <string name="product_quantity">Quantidade disponível</string>
    <string name="product_image_url">URL da imagem</string>
    <string name="product_button">Salvar</string>

    <!-- LOGIN SCREEN FIELD TEXT-->
    <string name="product_item_card_number">Número do cartão</string>
    <string name="product_item_card_exp_date">Validade (12/2030)</string>
    <string name="product_item_card_security_code">Código de segurança</string>

    <!-- LOGIN SCREEN FIELD TEXT-->
    <string name="login_user_name">Email do usuário</string>
    <string name="login_password">Senha</string>
    <string name="login_confirm">Entrar</string>
    <string name="login_to_new_user">Não tem cadastro? Crie um novo!</string>


    <string name="link_payment_provider">
        <a href="https://www.cielo.com.br/e-commerce/api/">Crie suas credenciais Cielo e-commerce clicando aqui.</a>
    </string>
</resources>
