<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_category0"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_category0" />
        <item
            android:id="@+id/nav_category1"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_category1" />
        <item
            android:id="@+id/nav_category2"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_category2" />
        <item
            android:id="@+id/nav_category3"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_category3" />

        <item
            android:id="@+id/nav_new_product"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_new_product" />

        <item
            android:id="@+id/nav_sales"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_sales" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_orders" />

        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/stat_notify_sync"
            android:title="@string/menu_login" />

    </group>

</menu>
