<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.GoToMarket.ProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_imageView6"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <TextView
                android:id="@+id/product_name_textView3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:text="TextView"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/product_value_textView3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:text="TextView"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_value_textView4"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="À vista"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/product_name_textView7"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:text="Descrição: "
                android:textColor="#ff7d27"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/product_description_textView5"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="TextView"
                android:textColor="@android:color/black" />


            <TextView
                android:id="@+id/payment_textView7"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:text="Pagamento com Cartão de Crédito"
                android:textColor="#ff7d27"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/payment_info_textView5"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="Insira os dados do seu cartão de crédito para efetuar a compra." />


            <EditText
                android:id="@+id/product_card_number_editText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:background="#e0e0e0"
                android:ems="10"
                android:hint="@string/product_item_card_number"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/product_card_exp_editText2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:background="#e0e0e0"
                android:ems="10"
                android:hint="@string/product_item_card_exp_date"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/product_card_security_editText3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:background="#e0e0e0"
                android:ems="10"
                android:hint="@string/product_item_card_security_code"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buy_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button"
                android:text="comprar"
                android:textColor="#ff7d27" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
